# Artificial-Association-Networks

./: .gitignore  AAN-SimpleImageTraining.ipynb  README.md  pyproject.toml  requirements.txt
aan/baselines/: gats.py  gcn.py  gru.py  mlp.py  rnn.py  scnn.py
aan/config/: option.py
aan/data_structures/: ablation.py  batch_neurotree.py  neurodataloader.py  neuronode.py  neurotree_builder.py
aan/datas/code/: load.py
aan/datas/graph/: load.py
aan/datas/image/: load.py
aan/datas/tabular/: load.py
aan/datas/text/: load.py  sst.py  sst3_neurotree_cache.pkl
aan/memory/: episodic.py
aan/models/: artificial_association_networks.py
aan/models/decoder_cell/: DGRU.py  DTAU.py  association_decoder_cell.py
aan/models/decoders/: readout_unmax.py  recursive_decoder.py
aan/models/encoder_cell/: EGATs.py  (+9 more)
benchmarks/: bench_dfc.py
dataset/: read.py
dataset/code/: load.py
experiments/: aggregate_30ep.py  baseline_unified.py  bench_vs_cnn.py  memory_recall.py  plot_curves_30ep.py  probe_e2.py  profile_dfc.py  rerun_queue.sh  run.py  run_sc1.py  sweep_e4.sh
models/pretrained/: sst_train_vocab.pkl
models/torch/: main.py
newversion/: AAN-SimpleImageTraining.ipynb
newversion/config/: option.py
newversion/constant/: common_keywords.py
newversion/data_structures/: batch_neurotree.py  neurodataloader.py  neuronode.py  neurotree_builder.py
newversion/models/: artificial_association_networks.py
tests/: conftest.py  test_domains.py  test_flat_engine.py  test_mask_engine.py  test_memory.py  test_smoke.py  test_tau.py  test_tau2.py  test_transformer_equiv.py
(+310 files in other folders)
